src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

#new-poem {
  padding-top: 25px;
}

#username {
  width: 600px;
}

#login {
  padding-top: 50px;
}

h6 {
  font-size: 50px;;
}

#sidebar-button {
  position:relative;
  display: flex;
  margin-top: 15px;
  margin-left: 15px;
}

#sidebar {
  position:fixed;
  top: 55px;
}

